--- a/LESS/style.less
+++ b/LESS/style.less
@@ -112,7 +112,7 @@ margin-top: 50px;
 
 #second-column{
     margin-top: 20px;
-    margin-left: 200px;
+    margin-left: 140px;
     width: 360px;
     height: 430px;
     background-color: rgb(200, 200, 200);
@@ -238,4 +238,22 @@ margin-top: 50px;
   color:white;
   font-size: @base-font/1.2;
 }
+
+.benefits{
+  background-color: rgb(240, 240, 240);
+  margin-left: 5%;
+  .set-dimension(260px, 289px);
+  p:first-child{
+    margin-top: 10px;
+  }
+  p{
+    font-size: 12px;
+    font-family: Arial;
+    text-align: center;
+    border-bottom: 1px solid rgba(0,0,0,.2);
+    padding: 18px 0px;
+  }
+}
+
+
 
